--- a/static/styles.css
+++ b/static/styles.css
@@ -293,3 +293,35 @@ footer {
 .quickAccessFoot a img:hover {
     transform: scale(1.5);
 }
+
+
+/* Account page */
+form {
+    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 60%;
+    box-shadow: 1px 2px 5px 2px rgb(197, 197, 197);
+    border-radius: 30px;
+    padding: 10px;
+}
+.inputFields {
+    margin: 10px;
+    padding-left: 50px;
+}
+
+.inputFields .inputBox {
+    width: 90%;
+    height: 30px;
+    border-radius: 10px;
+    border-style: none;
+    box-shadow: 1px 2px 2px 1px rgb(197, 197, 197);
+    margin-top: 15px;
+
+}
+
+.inputFields .btnSubmit {
+    width: 200px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: var(--pup-gold);
+}
