Improve the AddProduct

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -1,6 +1,6 @@
 <header>
     <h1 class="shopName">ShopLift</h1>
-        <img id="logo" src="{{url_for ('static', filename='images/logo.png')}}" alt="logo">
+        <img id="logo" src="{{url_for ('static', filename='icon/logo.png')}}" alt="logo">
         <nav class="tabs">
             <ul>
                 <li><a id="home" class="" href="{{url_for ('Home')}}" onclick="">Home</a></li>
