--- a/templates/views/account.html
+++ b/templates/views/account.html
@@ -1,5 +1,58 @@
-{% extends 'layout/base.html'%}
+{% extends 'layout/base.html' %}
 
 {% block content %}
-    
+<center><h1>Register</h1></center> <br>
+<form action="{{url_for('handleData')}}" method="POST">
+  <div class="inputFields">
+    <label for="fname" class="formLabel">First Name:</label> <br>
+    <input type="text" class="inputBox" id="fname" name="fname">
+  </div>
+
+   <div class="inputFields">
+    <label for="lname" class="formLabel">Last Name:</label> <br>
+    <input type="text" class="inputBox" id="lname" name="lname">
+  </div>
+
+   <div class="inputFields">
+    <label for="password" class="formLabel">Password:</label> <br>
+    <input type="password" class="inputBox" id="password" name="password">
+  </div>
+
+   <div class="inputFields">
+    <label for="address" class="formLabel">Address:</label> <br>
+    <input type="text" class="inputBox" id="address" name="address">
+  </div>
+
+   <div class="inputFields">
+    <label for="contactNumber" class="formLabel">Contact Number:</label> <br>
+    <input type="text" class="inputBox" id="contactNumber" name="contactNumber">
+  </div>
+
+  <div class="inputFields">
+    <button type="submit" class="btnSubmit">Submit</button>
+  </div>
+</form>
+<br>
+<center><h1>Add Products</h1></center>
+<br>
+<form action="{{url_for('addProduct')}}" method="POST" enctype="multipart/form-data">
+  <div class="inputFields">
+    <label for="productName" class="formLabel">Product Name:</label> <br>
+    <input type="text" class="inputBox" id="productName" name="productName">
+  </div>
+
+  <div class="inputFields">
+    <label for="productPrice" class="formLabel">Product Price:</label> <br>
+    <input type="text" class="inputBox" id="productPrice" name="productPrice">
+  </div>
+
+  <div class="inputFields">
+    <label for="fileIMG" class="formLabel">Select Image:</label> <br>
+    <input type="file" id="fileIMG" name="fileIMG" accept=".jpg" required>
+  </div>
+
+  <div class="inputFields">
+    <button type="submit" class="btnSubmit">Submit</button>
+  </div>
+</form>
 {% endblock %}
